--- a/css/banner.css
+++ b/css/banner.css
@@ -3,4 +3,10 @@
     background-color: var(--bg-color);
 
     border-style: solid;
+    border-radius: 0.5em;
+
+    padding: 1%;
+    width: 75%;
+
+    opacity: 0.8;
 }
