--- a/css/banner.css
+++ b/css/banner.css
@@ -1,6 +1,6 @@
 #project-banner {
-    --bg-color: #ffb099;
     background-color: var(--bg-color);
+    border-color: var(--border-color);
 
     border-style: solid;
     border-radius: 0.5em;
